<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_data"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_ditta"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ditta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_data"
            >
            <AutoCompleteTextView
                android:inputType="none"
                android:id="@+id/edit_text_ditta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_marca"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_ditta"
            >
            <AutoCompleteTextView
                android:inputType="none"
                android:id="@+id/edit_text_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_marca"
            android:weightSum="2"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_targa_mezzo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/targa_mezzo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_marca"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/edit_text_targa_mezzo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_tara_mezzo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/tara_mezzo"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:enabled="false"
                android:id="@+id/edit_text_tara_mezzo"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            android:weightSum="2"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:id="@+id/text_input_layout_lordo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/lordo"
                >
                <com.google.android.material.textfield.TextInputEditText

                    android:enabled="false"
                    android:id="@+id/edit_text_lordo"
                    android:layout_width="match_parent" android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"

                android:id="@+id/text_input_layout_portata_mezzo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/portata_mezzo"
                >
                <com.google.android.material.textfield.TextInputEditText

                    android:enabled="false"
                    android:id="@+id/edit_text_portata_mezzo"
                    android:layout_width="match_parent" android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_peso_in_arrivo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso_in_arrivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/edit_text_peso_in_arrivo"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/linear_layout3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_peso_in_arrivo"
            android:weightSum="2"
            >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"

            android:id="@+id/text_input_layout_da_caricare"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/da_caricare"

            >
            <com.google.android.material.textfield.TextInputEditText

                android:enabled="false"
                android:id="@+id/edit_text_da_caricare"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_rimanenza"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/rimanenza"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:enabled="false"
                android:id="@+id/edit_text_rimanenza"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/text_input_layout_litri_in_arrivo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/litri_in_arrivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout3"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/edit_text_litri_in_arrivo"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linear_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_litri_in_arrivo"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"

                android:id="@+id/text_input_layout_litri_attuali"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/litri_attuali"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/edit_text_litri_attuali"
                    android:layout_width="match_parent" android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:id="@+id/text_input_layout_litri_totali"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/litri_totali"
                >
                <com.google.android.material.textfield.TextInputEditText

                    android:enabled="false"
                    android:id="@+id/edit_text_litri_totali"
                    android:layout_width="match_parent" android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/salva"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout4"
            >

        </com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


